2002-06-04  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c (mips_after_parse_args): New function.
	(md_begin): Move processing of defaults to mips_after_parse_args.
	config/tc-mips.h (md_after_parse_args): Define.

2002-06-04  Jason Thorpe  <thorpej@wasabisystems.com>

	* configure.in (sh5*): Set cpu_type to sh64 and endian to big.
	(sh5le*, sh64le*): Set cpu_type to sh64 and endian to little.
	(sh5*-*-netbsd*, sh64*-*-netbsd*): New targets.
	* configure: Regenerate.
	* config/tc-sh64.c (sh64_target_format): Add support for NetBSD
	environment.

2002-06-04  Jason Thorpe  <thorpej@wasabisystems.com>

	* config/tc-sh64.h (MD_PCREL_FROM_SECTION): Undef before redefining.

2002-06-04  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_change_section): Set and check elf
	linkonce flag.  Print all warnings.
	(obj_elf_section): Parse ",comdat" for groups.
	(elf_frob_file): Set SEC_LINK_ONCE on COMDAT groups.  Check
	consistency of comdat flag.

2002-06-02  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_adjust_symtab_relocs): Fix thinko
	with LITERALs without sequence numbers.

2002-06-01  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c: Move LITUSE constants to "elf/alpha.h".
	Rename them LITUSE_ALPHA_*.

2002-05-31  Shrinivas Atre <ShrinivasA@kpit.com>

	* config/tc-h8300.c (get_operand): Allow stm.l and ldm.l insns to
	accept parentheses enclosed register lists.

2002-05-31  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2002-05-31  Graeme Peterson  <gp@qnx.com>

	* configure.in: Add i386-*-nto-qnx*.
	* configure: Regenerate.

2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (mips_ip): Use unsigned long values for
	warning output.

2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (s_cpsetup): Fix initialization of
	mips_cpreturn_register and mips_cpreturn_offset.
